--- a/app/views/layouts/default.html.erb
+++ b/app/views/layouts/default.html.erb
@@ -22,11 +22,11 @@
   <body>
     <h1>Agile Delivery Network</h1>
     <div id="statement">
-      <p>The current process for delivering software projects for the UK public sector is broken.</p>
+      <p>The current process for delivering software projects to the UK public sector is broken.</p>
       <p>A small group of big consultancies have a strangle-hold on this situation, and no real motivation for it to change.</p>
       <p>We are UK taxpayers who object to the obvious and avoidable waste in the current process.</p>
       <p>It's time for a fresh approach.</p>
-      <p>Each of us has a proven track record of delivering projects that delight their stakeholders.</p>
+      <p>Each of us has a proven track record of delivering software projects that delight their stakeholders.</p>
       <p>We believe that a key part of our success comes from applying the principles in the <a href="http://agilemanifesto.org/">Manifesto for Agile Software Development</a>.</p>
       <p>We are willing to help.</p>
     </div>
