Add link to principles

--- a/app/views/layouts/default.html.erb
+++ b/app/views/layouts/default.html.erb
@@ -27,7 +27,7 @@
       <p>We are UK taxpayers who object to the obvious and avoidable waste in the current process.</p>
       <p>It's time for a fresh approach.</p>
       <p>Each of us has a proven track record of delivering software projects that delight their stakeholders.</p>
-      <p>We believe that a key part of our success comes from applying the principles in the <a href="http://agilemanifesto.org/">Manifesto for Agile Software Development</a>.</p>
+      <p>We believe that a key part of our success comes from applying the <a href="http://agilemanifesto.org/principles.html">principles</a> in the <a href="http://agilemanifesto.org/">Manifesto for Agile Software Development</a>.</p>
       <p>We are willing to help.</p>
     </div>
     <div id="content">
